--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,36 +25,28 @@
     padding-left: 55px;
     padding-bottom: 54px;
     padding-top: 65px;
-p{
-
 }
 
-a{
-
+.Ul_footer
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+.Li_footer
+{
+    list-style: none;
+    float: left;
 }
 
-h1{
-
+.A_footer
+{
+    text-decoration: none;
+    color: black;
 }
-
-h1{
-
-}
-h2{
-
-}
-h3{
-
-}
-h4{
-
-}
-h5{
-
-}
-h6{
-
-}
-h7{
-
+.A_footer:hover
+{
+    transition: 0.2s;
+    color: red;
 }
