--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .login {
     background-image: url("/assets/image/fond.jpg");
-    width: 100%;
+    width: auto;
     min-height: 100vh;
     display: -webkit-box;
     display: -webkit-flex;
