--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ p {
 /***************************************************************************************/
 /***************************************************************************************/
 /***************************************************************************************/
+body
+{
+    background: #222 !important;
+}
 
 .NavSection
 {
