--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,15 @@ body
 {
     background: #222 !important;
 }
+
+ul{
+    margin: 0px;
+    padding: 0px;
+}
+
+li{
+    list-style: none !important;
+}
 .Banner_style
 {
     background: #333 !important;
@@ -51,16 +60,6 @@ body
     background-size: cover;
 }
 
-.log {
-    width: 500px;
-    background: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    padding-right: 55px;
-    padding-left: 55px;
-    padding-bottom: 54px;
-    padding-top: 65px;
-}
 
 
 
