ajout de commentaire et nettoyage du css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,17 @@ p {
 
 
 /***************************************************************************************/
+/*************************************   BODY   ****************************************/
 /***************************************************************************************/
-/***************************************************************************************/
+
 body
 {
     background: #222 !important;
 }
+
+/***************************************************************************************/
+/*************************************   LISTE   ***************************************/
+/***************************************************************************************/
 
 ul{
     margin: 0px;
@@ -27,20 +32,24 @@ ul{
 li{
     list-style: none !important;
 }
+
+/***************************************************************************************/
+/************************************   BANNER   ***************************************/
+/***************************************************************************************/
+
 .Banner_style
 {
     background: #333 !important;
-}
-
-.NavSection
-{
-    background-color: #64485c !important;
 }
 
 .Profil_pic_circle
 {
     border-radius: 50%;
 }
+
+/***************************************************************************************/
+/*********************************   FORM REGISTER   ***********************************/
+/***************************************************************************************/
 
 .login {
     background-image: url("/assets/image/fond.jpg");
@@ -61,15 +70,9 @@ li{
 }
 
 
-
-
-.foote_bottom_ul_amrc li {
-    display: inline;
-}
-
-.foote_bottom_ul_amrc li a {
-    color: #777;
-}
+/***************************************************************************************/
+/**********************************   FOOTER SOCIAL   **********************************/
+/***************************************************************************************/
 
 .social_footer_ul 
 {
@@ -107,6 +110,10 @@ li{
 {
     background: #101820FF;
 }
+
+/***************************************************************************************/
+/**********************************   FOOTER CREDIT   **********************************/
+/***************************************************************************************/
 
 .Credit
 {
