modification de style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,18 @@ p {
     font-family: 'Roboto', sans-serif;
 }
 
+/***************************************************************************************/
+/**************************************   ETC   ****************************************/
+/***************************************************************************************/
+
+ul{
+    margin: 0px;
+    padding: 0px;
+}
+
+li{
+    list-style: none !important;
+}
 
 /***************************************************************************************/
 /*************************************   BODY   ****************************************/
@@ -22,17 +34,45 @@ body
 }
 
 /***************************************************************************************/
-/*************************************   LISTE   ***************************************/
+/********************************   CONTAINER BODY   ***********************************/
 /***************************************************************************************/
 
-ul{
-    margin: 0px;
-    padding: 0px;
+.Container_body
+{
+    background: #F4B860 !important;
 }
 
-li{
-    list-style: none !important;
+/***************************************************************************************/
+/************************************   LOVERS   ***************************************/
+/***************************************************************************************/
+
+
+
+/***************************************************************************************/
+/*************************************   USERS   ***************************************/
+/***************************************************************************************/
+
+.description_user_bloc
+{
+    background: #C83E4D !important;
+    color: white; 
+    font-family: 'Roboto', sans-serif;
 }
+
+.input_button_user
+{
+
+}
+
+.input_button_user:hover
+{
+    
+}
+
+
+
+
+
 
 /***************************************************************************************/
 /************************************   BANNER   ***************************************/
