--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,10 @@ body
 /************************************   LOVERS   ***************************************/
 /***************************************************************************************/
 
+.Card_style
+{
+    min-height: 480px !important;
+}
 /***************************************************************************************/
 /*************************************   USERS   ***************************************/
 /***************************************************************************************/
